# renovate-playground

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/: renovate.json  renovate.json5
.github/workflows/: listing.yml
